Added shortest route with cards calculation